--- a/redpill.html
+++ b/redpill.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>butteredcheese.org</title>
+    <title>Red Pill</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
-  <body class="bg-dark">
+  <body class="bg-danger">
 
 
         <div class = "container">
             <div class = "row">
                 <div class = "col-12">
-                    <h1 class="text-center text-light pt-4">butteredcheese.org</h1>
-                    <h5 class="text-center text-light">Your home for random stuff</h5>
+                    <h1 class="text-center text-light pt-4">Welcome...</h1>
+                    <h3 class="text-center text-light">Why don't you stay awhile!</h3>
                         <div class="d-flex justify-content-center align-items-center" style="height: 8vh;">
-                            <button class="btn btn-primary"><a href="BR.html" class="btn btn-primary">Please Don't Click me</a></button>
-                        
+                            <button class="btn btn-dark"><a href="Rabbithole.html" class="btn btn-dark">Go Down the Rabbithole?</a></button>
+                            
                       </div>
                 </div>
             </div>
