Added more to index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div class = "col-12">
                     <h1 class="text-center text-light pt-4">butteredcheese.org</h1>
                     <h5 class="text-center text-light">Your home for random stuff</h5>
+                    <p class="text-center text-light">Also stupid stuff</p>
                         <div class="d-flex justify-content-center align-items-center" style="height: 8vh;">
                             <button class="btn btn-primary"><a href="BR.html" class="btn btn-primary">Please Don't Click me</a></button>
-                        
                       </div>
                 </div>
             </div>
