--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         
                         <div class="d-flex justify-content-center align-items-center" style="height: 8vh;">
                       
-                          <button class="btn btn-primary"><a href="kasm.butteredcheese.org" class="btn btn-primary">Kasm</a></button>
+                          <button class="btn btn-primary"><a href="https://kasm.butteredcheese.org" class="btn btn-primary">Kasm</a></button>
                         </div>
 
                 </div>
