It looks Sexy now

--- a/testindex.html
+++ b/testindex.html
@@ -40,9 +40,7 @@
           <!--Stuff Left-->
 
           <h1 class="text-white mt-5 mb-4">Welcome</h1>
-          <h5 class="text-white">Stay awhile.</h5>
-
-
+          <h5 class="text-white">This is the shit</h5>
 
         </div>
       </div>
@@ -53,13 +51,6 @@
         <div class="col-12">
 
           <!--Stuff Centered-->
-
-         <!--- Example
-          
-          <div class="d-flex justify-content-center align-items-center" style="height: 8vh;">
-            <button class="btn btn-dark"><a href="Sub-Sites/Redpill.html" class="btn btn-dark">Go Down the Rabbithole?</a></button>
-
-          --->
 
         </div>
       </div>
