--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <li class="nav-item">
               <a class="nav-link" href="Sub-Sites/About.html">About</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://unblocked-cheese.grilledcheese33.repl.co/">Unblocker</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -41,8 +47,6 @@
 
           <h1 class="text-white mt-5 mb-4">Welcome</h1>
           <h5 class="text-white">Stay awhile.</h5>
-
-
 
         </div>
       </div>
