--- a/Sub-Sites/About.html
+++ b/Sub-Sites/About.html
@@ -22,6 +22,11 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Sub-Sites/About.html">About</a>
+              <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://unblocked-cheese.grilledcheese33.repl.co/">Unblocker</a>
+            </li>
             </li>
           </ul>
         </div>
