--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <li class="nav-item">
               <a class="nav-link" href="https://unblocked-cheese.grilledcheese33.repl.co/">Unblocker</a>
             </li>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3424324905249828"
+     crossorigin="anonymous"></script>
           </ul>
         </div>
       </div>
@@ -47,6 +49,8 @@
 
           <h1 class="text-white mt-5 mb-4">Welcome</h1>
           <h5 class="text-white">Stay awhile.</h5>
+
+          
 
         </div>
       </div>
@@ -84,6 +88,8 @@
           </section>
 
         -->
+
+        
 
         </div>
       </div>
