--- a/Sub-Sites/About.html
+++ b/Sub-Sites/About.html
@@ -21,7 +21,7 @@
               <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Sub-Sites/About.html">About</a>
+              <a class="nav-link" href="About.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
