Just did stuff.

--- a/Sub-Sites/About.html
+++ b/Sub-Sites/About.html
@@ -24,6 +24,9 @@
               <a class="nav-link" href="About.html">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="ThingsWeLike.html">Things</a>
+            <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
             </li>
             <li class="nav-item">
@@ -54,24 +57,7 @@
           <!--Stuff Left-->
 
           <h1 class="text-white mt-5 mb-4">About Us</h1>
-          <p class="text-white">We are some people who do people things. We eat, drink, sleep and other stuff that people do. We also make games, websites, and other stupid things.
-            One newer project we are working on is a game called "Fella" We also scam the scammers that scam you. We have their servers and everything under our control. Also we go
-            hacky hacky and stuff. We are also working on a website called "The Red Pill" which is a website that is dedicated to exposing the truth about the world. That is alot of "We's"
-            and "Also's" dont you think? In total we are just a bunch of stupid people trying to do stupid things and make profits.
-          </p>
-
-          <h4 class="text-white mt-5 mb-4">Fella</h4>
-          <p class="text-white">Fella is a game that we are working on. It is about a guy named "Fella" who is a drug dealer.
-            The look and feel of the game is similar to that of Postal 2. The game is currently in development. An expected release date is unknown yet as the game is 
-            still in earlty development. Also the game breaks the fourth wall alot. The game is also a satire of the drug trade and the drug war. It also has alot of parodies of other games.
-            and American culture.
-          </p>
-
-          <h5 class="text-white mt-5 mb-4">The First moments of Fella</h5>
-          <p class="text-white">
-          Fella is cooking drugs in his apartment with a few friends when he gets a knock on his door from the police and the DEA.
-          Him and his friends are cuffed and taken to jail where he spends the next 15 years of his life.
-          When he gets out, he can’t find a job due to his criminal status. Once he learns that, he turns back to the life of crime and starts cooking and growing marijuana again.
+          <p class="text-white">We are your average computer programmers. We also make games and stuff.
 
           </p>
 
