--- a/Sub-Sites/NoClick.html
+++ b/Sub-Sites/NoClick.html
@@ -1,9 +1,9 @@
 <video width="800" height="940" controls>
-    <source src="/Cat.mp4" type="video/mp4">
+    <source src="Videos/Cat.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video> 
   <video width="800" height="940" controls>
-    <source src="/ElonOnlyFans.mp4" type="video/mp4">
+    <source src="Videos/ElonOnlyFans.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video> 
   
