--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://fellagame.com">Fella Game</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="Sub-Sites/About.html">About</a>
             </li>
             <li class="nav-item">
