--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
               <a class="nav-link" href="https://fellagame.com">Fella Game</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Sub-Sites/About.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Sub-Sites/ThingsWeLike.html">Things</a>
-            <li class="nav-item">
+              <a class="nav-link" href="https://www.youtube.com/@butteredcheese_org/featured">Youtube</a>
+              </li>
               <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
             </li>
             <li class="nav-item">
