--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://mongotomsbadasswebsite.com">Mongo Tom</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://fellagame.com">Fella Game</a>
             </li>
             <li class="nav-item">
