--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
           <h5 class="text-white mt-5 mb-3">Latest Updates</h5>
           <ul class="list-group">
-            <li class="list-group-item">New Unblocker</li>
+            <li class="list-group-item">Unblocker Blocked. working on a fix.</li>
             <li class="list-group-item">Possible domain change?</li>
             <li class="list-group-item">Might open source the site.</li>
           </ul>
