--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
               <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://hotrocketunblockit.grilledcheese33.repl.co/">Unblocker</a>
+              <a class="nav-link" href="https://importcheese.org">Unblocker</a>
             </li>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3424324905249828"
-     crossorigin="anonymous"></script>
           </ul>
         </div>
       </div>
@@ -64,9 +62,9 @@
     
           <h5 class="text-white mt-5 mb-3">Latest Updates</h5>
           <ul class="list-group">
-            <li class="list-group-item">Unblocker Blocked. working on a fix.</li>
-            <li class="list-group-item">Possible domain change?</li>
-            <li class="list-group-item">Might open source the site.</li>
+            <li class="list-group-item">Unblocker Fixed, running basic Violet</li>
+            <li class="list-group-item">Life is good</li>
+            <li class="list-group-item">If one eats, two eats.</li>
           </ul>
     
         </div>
