--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://importcheese.org">Unblocker</a>
+              <a class="nav-link" href="https://importcheeses.com">Unblocker</a>
             </li>
           </ul>
         </div>
