--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="https://kasm.butteredcheese.org">Kasm</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://importcheeses.com">Unblocker</a>
+              <a class="nav-link" href="https://bigcummies.xyz/">Unblocker</a>
             </li>
           </ul>
         </div>
@@ -62,9 +62,9 @@
     
           <h5 class="text-white mt-5 mb-3">Latest Updates</h5>
           <ul class="list-group">
-            <li class="list-group-item">Unblocker Fixed, running basic Violet</li>
-            <li class="list-group-item">Life is good</li>
-            <li class="list-group-item">If one eats, two eats.</li>
+            <li class="list-group-item">Temporary Unblocker Fix</li>
+            <li class="list-group-item">Can't block the madman</li>
+            <li class="list-group-item">Revolt</li>
           </ul>
     
         </div>
