--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="col-12 col-md-6">
                         <div class="card mb-3">
                             <div class="card-body">
-                                <h5 class="card-title">Version 0.0.6 Of Fella Game</h5>
+                                <h5 class="card-title">Version 0.0.5 of Fella Game</h5>
                                 <p class="card-text">A new update for the beta testers of Fella was released. You can read the full patch notes on the website. - fellagame.com</p>
                             </div>
                             <div class="card-footer">
