--- a/index.html
+++ b/index.html
@@ -10,19 +10,59 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <!--End Required Meta Tags-->
+
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <!--End Icons-->
+
+    <!--Logo Animation-->
+    <style>
+      .logo {
+        opacity: 0;
+        transform: translate(-100%);
+        transition: opacity 1s ease-out, transform 1s ease-out;
+      }
+      .logo.visible {
+        opacity: 1;
+        transform: translate(0);
+      }
+    </style>
+    <script>
+      document.addEventListener("DOMContentLoaded", function(event) {
+        var logo = document.querySelector(".logo");
+        logo.classList.add("visible");
+      });
+    </script>
+    <!--End Logo Animation-->
+
   </head>
   <body>
     <header class="container text-center py-5">
-      <img src="butteredcheeselogo.png" alt="Buttered Cheese LLC Logo" width="150">
+      <img src="butteredcheeselogo.png" alt="Buttered Cheese LLC Logo" width="150" class="logo">
       <h1 class="display-4">Buttered Cheese LLC</h1>
       <p class="lead">The best cheese experience you've ever had.</p>
     </header>
 
-    <!--Main Content-->
+    <!--Divider-->
+    <hr class="container" />
 
-    
-
-    <!--End Main Content-->
+    <!--Icons-->
+    <div class="container d-flex justify-content-around mb-5 text-center">
+      <a href="https://butteredcheese.ga/" class="icon-link">
+        <i class="fas fa-lock fa-2x" style="color: #ff1100;"></i>
+        <p class="text-white">Unblocker</p>
+      </a>
+      <a href="https://fellagame.com/" class="icon-link">
+        <i class="fas fa-gamepad fa-2x" style="color: #33ff00;"></i>
+        <p class="text-white">Fella Game</p>
+      </a>
+      <a href="https://mongotomsbadasswebsite.com/" class="icon-link">
+        <i class="fas fa-robot fa-2x" style="color: #008cff;"></i>
+        <p class="text-white">Mongo Tom</p>
+      </a>
+    </div>
+    <!--End Icons-->
+ 
 
     <footer class="container text-center py-3">
       <p>&copy; 2023 Buttered Cheese LLC. All Rights Reserved.</p>
