--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="butteredcheeselogo.png" type="image/x-icon">
+
     <!--End Required Meta Tags-->
 
     <!--Icons-->
