--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <i class="fas fa-gamepad fa-2x" style="color: #33ff00;"></i>
         <p class="text-white">Fella Game</p>
       </a>
-      <a href="https://importcheese.org/index.html" class="icon-link">
+      <a href="https://importcheeses.com/index.html" class="icon-link">
         <i class="fas fa-gear fa-2x" style="color: #fffb00;"></i>
         <p class="text-white">GKE GREMS</p>
       </a>
