--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <p class="text-white">Fella Game</p>
       </a>
       <a href="https://importcheeses.com/index.html" class="icon-link">
-        <i class="fas fa-gear fa-2x" style="color: #fffb00;"></i>
-        <p class="text-white">GKE GREMS</p>
+        <i class="fas fa-cheese fa-2x" style="color: #fffb00;"></i>
+        <p class="text-white">Cheesy Chronicles</p>
       </a>
       <a href="https://mongotomsbadasswebsite.com/" class="icon-link">
         <i class="fas fa-robot fa-2x" style="color: #008cff;"></i>
