--- a/index.html
+++ b/index.html
@@ -50,15 +50,7 @@
     <div class="container d-flex justify-content-around mb-5 text-center">
       <a href="https://butteredcheese.ga/" class="icon-link">
         <i class="fas fa-lock fa-2x" style="color: #ff1100;"></i>
-        <p class="text-white">Unblocker</p>
-      </a>
-      <a href="https://fellagame.com/" class="icon-link">
-        <i class="fas fa-gamepad fa-2x" style="color: #33ff00;"></i>
-        <p class="text-white">Fella Game</p>
-      </a>
-      <a href="https://mongotomsbadasswebsite.com/" class="icon-link">
-        <i class="fas fa-robot fa-2x" style="color: #008cff;"></i>
-        <p class="text-white">Mongo Tom</p>
+        <p class="text-white">Web Proxy</p>
       </a>
     </div>
     <!--End Icons-->
